# Yumi

./: .gitignore  README.md  graph.py  llm.py  main.py  nodes.py  pyproject.toml
Yumi_Brain/: llm.py  nodes.py
Yumi_Brain/prompts/: personality.txt
Yumi_Hears/: __init__.py  main.py  pipeline.py
Yumi_Speaks/: tts.py
prompts/: personality.txt
webui/: index.html
