[project]
name = "yumi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "numpy>=2.4.2",
    "python-dotenv>=1.0.1",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.14",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1"
]